# libacquire

./: .cirrus.yml  .docopt  .gitignore  .pre-commit-config.sh  CMakeLists.txt  Dockerfile.alpine  Dockerfile.debian  LICENSE-APACHE  LICENSE-MIT  README.md  USAGE.md  alpine.Dockerfile  codecov_badge_gen.sh  debian.Dockerfile  vcpkg.json
.github/workflows/: github-actions.yml
acquire/: CMakeLists.txt  StringExtras.h  acquire_checksums.h  acquire_common_defs.h  acquire_config.h.in  acquire_crc32c.h  acquire_download.h  acquire_errors.h  acquire_extract.h  acquire_fileutils.h  acquire_handle.h  acquire_libarchive.h  acquire_libcurl.h  acquire_libfetch.h  acquire_librhash.h  acquire_miniz.h  acquire_net_common.h  acquire_openbsd_ftp.h  acquire_openssl.h  acquire_status_codes.h  acquire_stdbool.h  acquire_string_extras.h  acquire_url_utils.h  acquire_wincompressapi.h  acquire_wincrypt.h  acquire_windows.h  acquire_wininet.h  acquire_winseccng.h  acquire_zlib.h  config.h.in  errors.h  fileutils.h  libacquire_export.h  libfetch.h  openbsd_ftp.h  openssl.h  stringutils.h  wincrypt.h
acquire/acquire_cli/: CMakeLists.txt  cli.c  cli.h  main.c
acquire/cli/: CMakeLists.txt  cli.c  cli.h  main.c
acquire/examples/: CMakeLists.txt  download_example.c
acquire/freebsd_libfetch/: CMakeLists.txt  common.c  common.h  fetch.c  fetch.h  file.c  ftp.c  http.c  shim.c  shim.h
acquire/openbsd_ftp/: CMakeLists.txt  extern.h  ftp.c  ftp_var.h  main.c  small.h  stringlist.c  stringlist.h
acquire/openbsd_ftp/morestd/: CMakeLists.txt  bsd-asprintf.c  bsd-asprintf.h
acquire/tests/: CMakeLists.txt  config_for_tests.h.in  test.c  test_amalgamation.c  test_amalgamation.h  test_checksum.h  test_checksums_dispatch.h  test_cli.h  test_curl_helpers.c  test_curl_helpers.h  test_download.h  test_extract.c  test_extract.h  test_fileutils.h  test_handle.h  test_libcurl_backend.c  test_libcurl_backend.h  test_libfetch.h  test_librhash.c  test_librhash.h  test_net_common.h  test_openssl.c  test_openssl.h  test_string_extras.h  test_url_utils.h
acquire/tests/test_libacquire/: CMakeLists.txt  config_for_tests.h.in  test_fileutils.h  test_string_extras.h
cmake/: FindCurlCustom.cmake  FindExtractLib.cmake  FindLibAcquire.cmake  FindLibArchiveCustom.cmake  FindLibBSD.cmake  FindLibRHash.cmake  FindLibreSSL.cmake  SplitHeaderOnly.cmake  generate_header_and_source_from_header_only.cmake  get_arch.cmake  libacquire.cmake  libacquire_amalgamation.cmake  libacquire_get_header.cmake  libacquire_helpers.cmake  rewrite_includes_to_gen.cmake  target_link_libraries_once.cmake
libacquire/: CMakeLists.txt  acquire.h  acquire_all.h  acquire_checksums.h  acquire_common_defs.h  acquire_config.h.in  acquire_crc32c.h  acquire_download.h  acquire_errors.h  acquire_extract.h  acquire_fileutils.h  acquire_libarchive.h  acquire_libcurl.h  acquire_libfetch.h  acquire_librhash.h  acquire_miniz.h  acquire_net_common.h  acquire_openbsd_ftp.h  acquire_openssl.h  acquire_stdbool.h  acquire_string_extras.h  acquire_string_utils.h  acquire_url_utils.h  acquire_wincrypt.h  acquire_wininet.h  acquire_winseccng.h  acquire_zlib.h
libacquire/acquire/: CMakeLists.txt  cli.c  cli.h  main.c
libacquire/freebsd_libfetch/: CMakeLists.txt  common.c  common.h  fetch.c  fetch.h  file.c  ftp.c  ftperr.h  http.c  httperr.h  shim.c  shim.h
libacquire/openbsd_ftp/: CMakeLists.txt  README.md  extern.h  ftp.c  ftp_var.h  stringlist.h
libacquire/openbsd_ftp/morestd/: CMakeLists.txt  bsd-asprintf.c  bsd-asprintf.h
libacquire/tests/: CMakeLists.txt  test_amalgamation.c  test_extract.h
libacquire/tests/test_libacquire/: CMakeLists.txt  config_for_tests.h.in  test.c  test_amalgamation.c  test_amalgamation.h  test_checksum.h  test_download.h  test_extract.c  test_extract.h  test_fileutils.h  test_miniz.h  test_string_extras.h
src/: StringExtras.h  acquire.h  checksums.h  cli.c  cli.h  config.h.in  curl_fopen.c  curl_fopen.h  fileutils.h  libcurl.h  libfetch.h  macos_crypto.h  main.c  openbsd.ftp.c  openssl.h  stdbool.h  stringutils.h  wincrypt.h  wininet.h  winseccng.h
tests/: CMakeLists.txt
tests/src/: config_for_tests.h.in  test.c  test_checksums.h  test_fileutils.c  test_fileutils.h  test_foo.c  test_string_extras.h
